# zera-network

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  rules-of-engagement.md
z_validator/: zera-validator.cpp
z_validator/attestation/: attestation_process.cpp  attestation_process.h
z_validator/blake3/: blake3_dispatch.c  blake3_impl.h
z_validator/block_process/: block_process.h  block_timer.cpp  fees.cpp  fees.h  fees_simple.cpp  pre_process.cpp  process_txn.cpp  process_utils.cpp  store_txns.cpp  zera_manager.h
z_validator/block_process/custom/: process_expense.cpp  process_heartbeat.cpp  process_item_mint.cpp  process_mint.cpp  process_new_coin.cpp  process_proposal.cpp  process_registration.cpp  process_required_version.cpp  process_smart_contract_deploy.cpp  process_smart_contract_execute.cpp  process_smart_contract_instantiate.cpp
z_validator/block_process/template/: process_allowance.cpp  process_compliance.cpp  process_contract.cpp  process_cur_equiv.cpp  process_fast_quorum.cpp  process_quash.cpp  process_revoke.cpp  process_update_contract.cpp  process_votes.cpp
z_validator/compliance/: compliance.cpp  compliance.h
z_validator/crypto/: lottery.cpp  merkle.cpp  merkle.h  signatures.cpp  wallets.cpp
z_validator/db/: database.cpp  db_base.cpp  db_block_headers.cpp  db_blocks.cpp  db_config.cpp  db_validators.cpp  migrate_db.cpp  migrate_db.h  reorg.cpp  reorg.h
z_validator/governance/: gov_process.cpp  gov_process.h  time_calc.cpp  time_calc.h
z_validator/grpc/api/: ace_tokens.cpp  api_service.cpp  balance.cpp  base_fee.cpp  block.cpp  contract.cpp  contract_fee.cpp  database.cpp  denomination.cpp  items.cpp  nonce.cpp  proposals.cpp  smart_contract_activity.cpp
z_validator/grpc/client/: client_network_service.cpp  validator_api_client.cpp
z_validator/grpc/p2p/api/: balance_service.cpp  indexer_voting_service.cpp  nonce_service.cpp
z_validator/grpc/p2p/client/: attestation_client.cpp  block_sync_client.cpp  gossip_client.cpp  validator_network_client.cpp
z_validator/grpc/p2p/server/: attestation_service.cpp  block_sync_service.cpp  broadcast_service.cpp  gossip_service.cpp  validator_network_service.cpp
z_validator/headers/: base58.h  block.h  client_network_service.h  const.h  database.h  db_base.h  debug.h  hashing.h  hex_conversion.h  lottery.h  native_function_db_get_data.h  native_function_db_store_single.h  native_function_get_ace.h  native_function_states.h  native_function_txns.h  native_function_utils.h  proposer.h  rate_limiter.h  signatures.h  smart_contract_sender_data.h  smart_contract_service.h  test.h  threadpool.h  txn.grpc.pb.cc  txn.grpc.pb.h  txn.pb.cc  txn.pb.h  utils.h  validator.grpc.pb.cc  validator.grpc.pb.h  validator.pb.cc  validator.pb.h  validator_api_client.h  validator_api_service.h  validator_network_client.h  validator_network_service_grpc.h  validators.h  verify_process_txn.h  wallet.grpc.pb.cc  wallet.grpc.pb.h  (+8 more)
z_validator/logging/: logging.cpp  logging.h
z_validator/proposer/: pre_process.cpp  proposer.cpp  proposer_utils.cpp  reg_process.cpp  select_validators.cpp  validate_block.cpp  validator_balances.cpp
z_validator/proto/: txn.proto  validator.proto  wallet.proto  zera_api.proto
z_validator/restricted/: restricted_keys.cpp  restricted_keys.h
z_validator/smart_contract/: smart_contract_service.cpp
z_validator/smart_contract/native_functions/: native_function_allowance.cpp  native_function_contract_bridge.cpp  native_function_db_get_data.cpp  native_function_db_store_single.cpp  native_function_expense_ratio.cpp  native_function_get_ace.cpp  native_function_hold.cpp  native_function_mint.cpp  native_function_multi_send.cpp  native_function_send.cpp  native_function_states.cpp  native_function_transfer.cpp  native_function_utils.cpp  native_function_vote.cpp
z_validator/temp_data/: allowance_tracker.cpp  balance_tracker.cpp  contract_price_tracker.cpp  fast_quorum_tracker.cpp  item_tracker.cpp  nonce_tracker.cpp  proposer_tracker.cpp  quash_tracker.cpp  recieved_tracker.cpp  sbt_burn_tracker.cpp  status_fee_tracker.cpp  supply_tracker.cpp  temp_data.h  txn_hash_tracker.cpp  txn_tracker.cpp
z_validator/template/: process_delegated_voting.cpp  process_nft.cpp  process_sbt_burn.cpp
z_validator/test/: debug.cpp  test.cpp
z_validator/txn_batch/: batch_contract.cpp  batch_gov.cpp  batch_item.cpp  batch_misc.cpp  batch_proposals.cpp  batch_smart_contract.cpp  batch_validator.cpp  txn_batch.h
z_validator/util/: base58.cpp  block.cpp  block_timer.h  get_legal_string.cpp  hex_conversion.cpp  nuke.cpp  nuke.h  startup_config.cpp  startup_config.h  stopwatch.h  threadpool.cpp  utils.cpp  validate_block.cpp  validate_block.h  validator_config.cpp  validators.cpp
z_validator/vp/: verify_process.cpp  vp_broadcast.cpp
